--- a/index.html
+++ b/index.html
@@ -1,11 +1,122 @@
-<html>
-<script src="lib/raphael.min.js"></script>
-<script src="lib/mithril.min.js"></script>
-<script src="js/ADGame.js"></script>
-<script src="js/game.js"></script>
-<body>
-<h1>WOIOS</h1>
-<button id="startButton" style="display: block; position: relative; top: -50px; left: 150px;">start game</button>
-<div id="scoreholder" style="position: relative; left: 680px; top: -60px;"></div>
-</body>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Shooting stuff</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
+
+
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">A Space Shooter Wot I Made</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-8">
+          <h2>The Game</h2>
+          <div id="game-target">&nbsp;</div>
+        </div>
+        <div class="col-md-4">
+          <h2>The Controls</h2>
+          <ul class="list-group">
+            <li class="list-group-item header">
+              <div class="row">
+                <div class="col-xs-4">
+                  Input
+                </div>
+                <div class="col-xs-8">
+                  Description
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="control col-xs-4">
+                  W,A,S,D
+                </div>
+                <div class="description col-xs-8">
+                  movement
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="control col-xs-4">
+                  K
+                </div>
+                <div class="description col-xs-8">
+                  Shoot
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="control col-xs-4">
+                  L
+                </div>
+                <div class="description col-xs-8">
+                  Change Weapon Type
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="control col-xs-4">
+                  P
+                </div>
+                <div class="description col-xs-8">
+                  pause/unpause
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/raphael.min.js"></script>
+    <script src="js/lib/mithril.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/ADGame.js"></script>
+    <script src="js/game.js"></script>
+  </body>
 </html>
