we now has sounds

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
               <div class="row">
                 <div class="control col-xs-4">
                   W,A,S,D
+                  <span class="or">or</span>
+                  <img src="assets/images/controller_buttons/360_Left_Stick.png" width="30" />
                 </div>
                 <div class="description col-xs-8">
                   movement
@@ -75,9 +77,12 @@
               <div class="row">
                 <div class="control col-xs-4">
                   K
+                  <span class="or">or</span>
+                  <img src="assets/images/controller_buttons/360_A.png" width="30" />
                 </div>
                 <div class="description col-xs-8">
                   Shoot
+
                 </div>
               </div>
             </li>
@@ -85,6 +90,8 @@
               <div class="row">
                 <div class="control col-xs-4">
                   L
+                  <span class="or">or</span>
+                  <img src="assets/images/controller_buttons/360_B.png" width="30" />
                 </div>
                 <div class="description col-xs-8">
                   Change Weapon Type
@@ -115,6 +122,7 @@
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/raphael.min.js"></script>
     <script src="js/lib/mithril.min.js"></script>
+    <script src="js/lib/buzz.min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/ADGame.js"></script>
     <script src="js/game.js"></script>
