adding some words and stuff to the index page

--- a/index.html
+++ b/index.html
@@ -111,6 +111,38 @@
           </ul>
         </div>
       </div>
+      <div class="row">
+         <div class="col-md-12">
+          <h2>The Story</h2>
+          <p>Hello, and welcome to 'The shooter wot I made'. It's the first in a series of simple shooters that I'm
+            making in attempt to teach myself games programming. It's in an engine that I'm putting together myself, just to see
+            if I can. Feel free to browse the code on <a href="https://github.com/sam-higton/woios">github</a>, and be as critical as you like.</p>
+
+            <p>If you just so happen to be using this in Chrome, it should also work with a gamepad too. I tested with an Xbox 360
+              controller, but in theory, any x-input device should work.</p>
+
+            <p><strong>note: </strong>By no means view this code as best practice, a lot of it I'm making up   
+            on the spot, and is probably woefully inefficient. If you're looking to learn games programming, I
+            strongly recommend following the tutorials at <a href="http://gamedev.tutsplus.com">tutsplus</a>.</p> 
+
+            <p>I'm also using the following libraries: </p>
+            <ul>
+              <li>Raphael.js for rendering. This was probably a bad call, as it uses SVG over canvas, and canvas
+                is much more efficient at rendering lots of objects, a bit like in a video game.
+              </li>
+
+              <li>
+                I'm using buzz.js to manage sounds. It's based around html5 audio, and I must say, it's pretty damn good and simple to use.
+              </li>
+              <li>
+                I'm also using blxr.net to generate my sound effects; a delighful little web based midi synthesizer. 
+              </li>
+             
+            </ul>
+
+            <p>So, enjoy the game, and feel free to contact me via <a href="http://www.twitter.com/legendary_axe">twitter</a> or <a href="http://www.facebook.com/sam-higton">facebook</a> if you have any questions.
+        </div>
+      </div>
 
     </div><!-- /.container -->
 
